// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleGroup Should call onToggle in uncontrolled scenarios 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c5 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c5:hover {
  border: none;
  box-shadow: none;
}

.c7 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c7:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c5"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
      <div
        class="c6"
      >
        <button
          aria-checked="false"
          class="c3 c7"
          role="radio"
          tabindex="-1"
          type="button"
        >
          three
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup Should call onToggle in uncontrolled scenarios with multiple prop 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c5 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c5:hover {
  border: none;
  box-shadow: none;
}

.c7 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c7:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="group"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c4"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c5"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
      <div
        class="c6"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c7"
          tabindex="-1"
          type="button"
        >
          three
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup Should put tab focus on active button when value 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) >circle,
.c7:focus:not(:focus-visible) >ellipse,
.c7:focus:not(:focus-visible) >line,
.c7:focus:not(:focus-visible) >path,
.c7:focus:not(:focus-visible) >polygon,
.c7:focus:not(:focus-visible) >polyline,
.c7:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c5 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c5:hover {
  border: none;
  box-shadow: none;
}

.c8 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c8:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="-1"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c5"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
      <div
        class="c6"
      >
        <button
          aria-checked="true"
          class="c7 c8"
          role="radio"
          tabindex="0"
          type="button"
        >
          three
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup Should put tab focus on active button when value with multiple prop 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c8:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

.c9 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c9:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="group"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c4"
          tabindex="-1"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="true"
          class="c5 c6"
          tabindex="0"
          type="button"
        >
          two
        </button>
      </div>
      <div
        class="c7"
      >
        <button
          aria-checked="false"
          aria-pressed="true"
          class="c8 c9"
          tabindex="-1"
          type="button"
        >
          three
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup Should put tab focus on first button when no value 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

.c8 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c8:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c5 c6"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
      <div
        class="c7"
      >
        <button
          aria-checked="false"
          class="c5 c8"
          role="radio"
          tabindex="-1"
          type="button"
        >
          three
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup Should put tab focus on first button when no value with multiple prop 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

.c8 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c8:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="group"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c4"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c5 c6"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
      <div
        class="c7"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c5 c8"
          tabindex="-1"
          type="button"
        >
          three
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup Should render when options is array of objects with multiple prop 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="group"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c4"
          tabindex="0"
          type="button"
        >
          One
        </button>
      </div>
      <div
        class="c5"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c6"
          tabindex="-1"
          type="button"
        >
          Two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup custom theme 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 3px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px #7D4CDB;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c5"
      >
        <button
          aria-checked="false"
          class="c3 c6"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup icon with tooltip 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  background: none;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 6px;
  background-color: #33333310;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  border-radius: 12px;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background: none;
  margin: 0px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c0 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  aria-hidden="false"
>
  <div
    class="c0 c1"
    data-g-portal-id="0"
    style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
    tabindex="-1"
  >
    <div
      class="c2"
    >
      add
    </div>
  </div>
</div>
`;

exports[`ToggleGroup icon with values 1`] = `
<DocumentFragment>
  .c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) >circle,
.c7:focus:not(:focus-visible) >ellipse,
.c7:focus:not(:focus-visible) >line,
.c7:focus:not(:focus-visible) >path,
.c7:focus:not(:focus-visible) >polygon,
.c7:focus:not(:focus-visible) >polyline,
.c7:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c8 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c8:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="true"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          <svg
            aria-label="Add"
            class="c5"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 22V2M2 12h20"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
      <div
        class="c6"
      >
        <button
          aria-checked="false"
          class="c7 c8"
          role="radio"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-label="Subtract"
            class="c5"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 12h20"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup object options 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          One
        </button>
      </div>
      <div
        class="c5"
      >
        <button
          aria-checked="false"
          class="c3 c6"
          role="radio"
          tabindex="-1"
          type="button"
        >
          Two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup renders without grommet wrapper 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

<div
    class="c0"
    role="radiogroup"
  />
</DocumentFragment>
`;

exports[`ToggleGroup renders without props 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    />
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup should allow divider to be set to false 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c5 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c5:hover {
  border: none;
  box-shadow: none;
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c5"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup should allow rounding on individual buttons 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-radius: 2em;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c5"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup should have no accessibility violations 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c5 {
  border-radius: 0;
  border: none;
  border-radius: 0;
  padding: 11px;
}

.c5:hover {
  border: none;
  box-shadow: none;
}

.c7 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c7:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          Option 1
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c5"
          role="radio"
          tabindex="-1"
          type="button"
        >
          Option 2
        </button>
      </div>
      <div
        class="c6"
      >
        <button
          aria-checked="false"
          class="c3 c7"
          role="radio"
          tabindex="-1"
          type="button"
        >
          Option 3
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup string options 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          class="c3 c4"
          role="radio"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c5"
      >
        <button
          aria-checked="false"
          class="c3 c6"
          role="radio"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup string options with multiple prop 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-right: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  border-radius: 0;
  border: none;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  padding: 11px;
}

.c4:hover {
  border: none;
  box-shadow: none;
}

.c6 {
  border-radius: 0;
  border: none;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  padding: 11px;
}

.c6:hover {
  border: none;
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-right: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      role="group"
    >
      <div
        class="c2"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c4"
          tabindex="0"
          type="button"
        >
          one
        </button>
      </div>
      <div
        class="c5"
      >
        <button
          aria-checked="false"
          aria-pressed="false"
          class="c3 c6"
          tabindex="-1"
          type="button"
        >
          two
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
